crates/eml_cli/tests/snapshots/integration__ui__run@modules__alias.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/alias/main.em
---
--- stdout ---
[x]
--- stderr ---
