crates/eml_cli/tests/snapshots/integration__ui__run@modules__effect_operations.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/effect_operations/main.em
---
--- stdout ---
20
42
42
--- stderr ---
