crates/eml_cli/tests/snapshots/integration__ui__run@modules__fixity.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/fixity/main.em
---
--- stdout ---
7
10
--- stderr ---
