crates/eml_cli/tests/snapshots/integration__ui__run@modules__import_list.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/import_list/main.em
---
--- stdout ---
19
--- stderr ---
