crates/eml_cli/tests/snapshots/integration__ui__run@modules__merged_qualifier.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/merged_qualifier/main.em
---
--- stdout ---
a!
(b)
c!
--- stderr ---
