crates/eml_cli/tests/snapshots/integration__ui__run@modules__prelude_qualifier.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/prelude_qualifier/main.em
---
--- stdout ---
yes
no
--- stderr ---
