crates/eml_cli/tests/snapshots/integration__ui__run@modules__qualified.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/qualified/main.em
---
--- stdout ---
a=10
b2
--- stderr ---
