crates/eml_cli/tests/snapshots/integration__ui__run@modules__shadowing.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/shadowing/main.em
---
--- stdout ---
15
10
True
False
--- stderr ---
