crates/eml_cli/tests/snapshots/integration__ui__run@modules__std_qualified_without_import.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/std_qualified_without_import.em
---
--- stdout ---
hello from a file
--- stderr ---
