crates/eml_cli/tests/snapshots/integration__ui__run@modules__type_constructors.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/modules/type_constructors/main.em
---
--- stdout ---
16
6
--- stderr ---
